--- a/golang/build-image/.gitlab-ci.yml
+++ b/golang/build-image/.gitlab-ci.yml
@@ -9,9 +9,7 @@ include: '/common/push-image/.gitlab-ci.yml'
 .build_image: &build_image
                 docker build --build-arg SUB_MODULE=$SUB_MODULE -t $MODULE_PREFIX-$SUB_MODULE:$VERSION -f $DOCKER_FILE .;
 
-# 修改点：
-# 1、没有push镜像
-.golang_build_image_base_v2:
+.golang_build_image_base:
   stage: build
   image: 172.1.1.1/common/golang:1.20.3
   tags:
