--- a/golang/unit-test/base/.gitlab-ci.yml
+++ b/golang/unit-test/base/.gitlab-ci.yml
@@ -3,7 +3,7 @@
   image: 172.1.1.1/common/golang:1.20.3
   tags:
     - x86
-  interruptible: false
+  interruptible: true
   only:
     changes:
       - "**/*.go"
